cambios en el home, navbar

--- a/src/style/_setting.scss
+++ b/src/style/_setting.scss
@@ -1,5 +1,5 @@
 
-
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;500&family=Sorts+Mill+Goudy:ital@0;1&display=swap');
 
 /*Colors light*/
 
@@ -8,3 +8,7 @@ $backgoundLight: #E5E2CA;
 $redLight: #E7472E;
 $blueLight:#52908B;
 $brownLetters:#472C33;
+
+/*Fonts*/
+$titleFont:'Sorts Mill Goudy', serif;
+$fontGeneric:'Montserrat', sans-serif;
