--- a/src/style/screensStyle/_home.scss
+++ b/src/style/screensStyle/_home.scss
@@ -1,24 +1,72 @@
 
 @import '../setting';
 
+
+/*Home*/
+h1{
+    font-family: $titleFont;
+    font-size: 50px;
+    font-weight: 500;
+    color:$brownLetters;
+}
+
+h2,h3,h4{
+    font-family: $fontGeneric;
+    color:$brownLetters;
+}
+h3, h4{
+    font-weight: 500;
+    font-size: 20px;
+}
+h2{
+    font-weight: 600;
+    font-size: 20px;
+    color:$blueLight;
+}
+
+.homeDiv{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+/*NavBar*/
 .navBarUl{
-    margin:5%;
+    margin:2%;
     display: flex;
     flex-direction: row;
     list-style: none;
-    padding: 25px 0;
-    background-color: $redLight;
+    justify-content: space-evenly;
+    a {
+        text-decoration: none;
+        color: $brownLetters;
+        font-weight: 400;
+        vertical-align: top;
+        position: relative;
+    }
+li{
+    position:relative;
+    padding: 5px;
+    &::before{
+        content: '';
+        position: absolute;
+        width: 100%;
+        height: 3px;
+        border-radius: 4px;
+        background-color:$redLight;
+        bottom: 0;
+        left: 0;
+        transform-origin: right;
+        transform: scaleX(0);
+        transition: transform 0.3s ease-in-out;
+    }
+    &:hover::before{
+        transform-origin: left;
+        transform: scaleX(1);
+    }
+}
+}
 
-&li{
-    margin: auto;
-    color:$brownLetters;
-    font-size: 20px;
-    cursor: pointer;
-} li:after{
-    display: block;
-}
-li:hover:after{
-    transform: scaleX(1);
-}
-}
+    
+
+
 
