--- a/src/style/styles.scss
+++ b/src/style/styles.scss
@@ -10,7 +10,6 @@
     padding: 0px;
     box-sizing: border-box;
 }
-
-.color{
-    background-color:red;
+body{
+    background-color:$backgoundLight;
 }
