dark and light theme

--- a/src/style/styles.scss
+++ b/src/style/styles.scss
@@ -18,7 +18,15 @@ height: 100%;
   position: relative;
   min-height:100vh;
 }
-
+.dark{
+background-color: #333;
+color: #fff;
+}
+.light {
+    background-color: #fff;
+    color: #333;
+ }
+ 
 body.light { 
     button {
         background-color: blue;
