--- a/src/style/_setting.scss
+++ b/src/style/_setting.scss
@@ -4,9 +4,11 @@
 /*Colors light*/
 
 
-$backgoundLight: #E5E2CA;
-$redLight: #E7472E;
-$blueLight:#52908B;
+$backgoundLight: #dacdac;
+$backgroundDark:#1e1801;
+$redLight: #f85741;
+$orange:#f39708;
+$blueLight:#0e9094;
 $brownLetters:#472C33;
 
 /*Fonts*/
