theme dark and light

--- a/src/style/_setting.scss
+++ b/src/style/_setting.scss
@@ -1,15 +1,20 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;500&family=Sorts+Mill+Goudy:ital@0;1&display=swap');
 
-/*Colors light*/
-
-
-$backgoundLight: #dacdac;
+/*Colors*/
+$backgoundLight: #bfaa87;
 $backgroundDark:#1e1801;
-$redLight: #f85741;
-$orange:#f39708;
-$blueLight:#0e9094;
+$lightBrown: #c7bca7;
+$red: #b70000;
+$redLight:#e7250a;
+$blue:#0e9094;
+$darkBlue:#0087e9;
+$blueLight:#59c2ef;
+$green:#33e6ac;
+$darkGreen:#00c0a9;
+$darkGreenDark:#04685c;
 $brownLetters:#472C33;
+$violet:#af639e;
 
 /*Fonts*/
 $titleFont:'Sorts Mill Goudy', serif;
