--- a/src/style/screensStyle/_skills.scss
+++ b/src/style/screensStyle/_skills.scss
@@ -9,7 +9,9 @@
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
+    margin: 10px;
     width: 50%;
+    padding: 10px;
 
 }
 
@@ -17,5 +19,5 @@
     width: 100px;
     height: 85px;
     padding: 5px;
-    margin: 5px;
+    margin: 10px;
 }
