--- a/src/style/styles.scss
+++ b/src/style/styles.scss
@@ -3,6 +3,7 @@
 @import './screensStyle/projects';
 @import './screensStyle/home';
 @import './screensStyle/skills';
+@import './screensStyle/Contact';
 
 
 * {
@@ -10,17 +11,41 @@
     padding: 0px;
     box-sizing: border-box;
 }
-body{
-    background-color:$backgoundLight;
-}
+// body{
+//     background-color:$backgoundLight;
+// }
 .app{
 height: 100%;
   position: relative;
   min-height:100vh;
 }
-.dark{
+
+#dark{
 background-color: $backgroundDark;
 }
-.light {
-    background-color: $backgoundLight;
+
+#light {
+  background-color: $lightBrown;
  }
+
+ .switch {
+    display: flex;
+    width: 100vw;
+    height: 100px;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+    font-weight: bold;
+  }
+  
+  .switch label {
+    margin: 10px;
+  }
+  
+  #light .switch label {
+    color: $darkBlue;
+  }
+  
+  #dark .switch label {
+    color: $red;
+  }
