--- a/src/style/styles.scss
+++ b/src/style/styles.scss
@@ -4,6 +4,7 @@
 @import './screensStyle/home';
 @import './screensStyle/skills';
 @import './screensStyle/Contact';
+@import './screensStyle/CardProjects';
 
 
 * {
@@ -15,27 +16,34 @@
 //     background-color:$backgoundLight;
 // }
 .app{
-height: 100%;
+  height: 100%;
   position: relative;
   min-height:100vh;
 }
-
+.sectionAPP{
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
 #dark {
 background-color: $backgroundDark;
+
 }
 
 #light {
-background-color: $lightBrown;
+background-color: whitesmoke;
  }
 
  .switch {
     display: flex;
-    width: 100vw;
     height: 100px;
     justify-content: center;
     align-items: center;
     font-size: 20px;
     font-weight: bold;
+    font-family: $titleFont;
+    letter-spacing: 6px;
   }
   
   .switch label {
@@ -49,3 +57,4 @@ background-color: $lightBrown;
   #dark .switch label {
     color: $red;
   }
+
