--- a/src/style/_setting.scss
+++ b/src/style/_setting.scss
@@ -3,7 +3,7 @@
 
 /*Colors*/
 $backgoundLight: #bfaa87;
-$backgroundDark:#1e1801;
+$backgroundDark:#000000;
 $lightBrown: #c7bca7;
 $red: #b70000;
 $redLight:#e7250a;
@@ -11,10 +11,12 @@ $blue:#0e9094;
 $darkBlue:#0087e9;
 $blueLight:#59c2ef;
 $green:#33e6ac;
+$lightGreen:#22c1a087;
 $darkGreen:#00c0a9;
 $darkGreenDark:#04685c;
 $brownLetters:#472C33;
 $violet:#af639e;
+$darkViolet:#6d1e5c;
 
 /*Fonts*/
 $titleFont:'Sorts Mill Goudy', serif;
