--- a/src/style/screensStyle/_Contact.scss
+++ b/src/style/screensStyle/_Contact.scss
@@ -4,17 +4,23 @@
     width: 100%;
     height: 100%;
   }
-  
+
   .sectionHeader {
     text-align: center;
     margin: 0 auto;
     padding: 40px 0;
-    font: 300 60px 'Oswald', sans-serif;
-    color: #fff;
+    font-family:$fontGeneric;
+    color: #ff0c69;
     text-transform: uppercase;
     letter-spacing: 6px;
+    font-weight: 800;
+    font-size: 35px;
   }
-  
+  #light .sectionHeader{
+    color:$darkBlue;
+    text-shadow: 1px 1px 4px #ff7de3;
+  }
+
   .contactWrapper {
     display: flex;
     flex-direction: row;
@@ -27,31 +33,43 @@
   
   /* Left contact page */
   .formContact {
-    width: 25%;
+    width: 40%;
     font-family: 'Lato';
     font-weight: 400;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+   
   }
-  
+  .formContact input{
+    width: 300px;
+    background: bottom;
+  }
   .formControl, 
   textarea {
-    max-width: 500px;
+    width: 300px;
     margin: 5px;
-    border: 1px solid #000;
+    border: 1px solid rgb(255, 0, 0);
     border-radius: 5px;
     padding: 5px;
     letter-spacing: 1px;
+    background: bottom;
   }
   
   .formButton {
     margin-top: 15px;
     height: 40px;
-    width: 240px;
-    border: 1px solid #000;
+    width: 200px;
+    border: 1px solid #f00;
     border-radius: 5px;
     overflow: hidden;
     transition: all .2s ease-in-out;
+    background: bottom;
+    color:#00ffe0;
   }
-  
+  #light .formButton{
+    color: $violet;
+  }
   .alt-formButton {
     width: 100%;
     height: 100%;
@@ -60,23 +78,40 @@
   
   .sendText {
     display: block;
-    font: 700 12px "Lato", sans-serif;
-    letter-spacing: 2px;
+    font: 500 20px "Lato", sans-serif;
+    letter-spacing: 3px;
+    text-align: center;
   }
   
   .alt-formButton:hover {
-    transform: translate3d(0px, -29px, 0px);
+    transform: translate3d(0px, -30px, 0px);
   }
   
-  /* Begin Right Contact Page */
+
   .dataContactContainer {
-    width: 20%;
+    width: 40%;
     display: flex;
-    color: black;
+    color: $green;
     align-items: center;
     flex-direction: column;
+    & li {
+      color:$darkBlue;
+    }
+    & span{
+      color:$darkGreenDark;
+      font-family: $fontGeneric;
+      font-weight: 500;
+      font-size: 20px;
+      letter-spacing: 6px;
+    }
   }
-  
+  #dark .dataContactContainer li {
+    color:$violet;
+  }
+  #dark .dataContactContainer span {
+    color:$red;
+
+  }
   /* Location, Phone, Email Section */
   .contactList {
     list-style-type: none;
@@ -110,8 +145,7 @@
     height: 2em;
     width: 3em;
   }
-  
-  /* Social Media Icons */
+
   .social-media-list {
     position: relative;
     font-size: 22px;
@@ -120,9 +154,12 @@
     margin: 0 auto;
     padding: 0;
   }
-  
+  #dark .social-media-list a{
+    color:$green;
+    text-shadow: 1px 1px 4px #00ffe0;
+  }
   .social-media-list li a {
-    color: rgba(255, 255, 255, 0.404);
+    color: #fef7ff;
   }
   
   .social-media-list li {
@@ -133,12 +170,15 @@
     margin: 10px 3px;
     line-height: 60px;
     border-radius: 50%;
-    color: #fff;
-    background-color: rgb(27,27,27);
+    color: #12fff3;
+    background-color:  #ff00ff79;
     cursor: pointer; 
     transition: all .2s ease-in-out;
   }
-  
+  #dark .social-media-list li:after {
+    color: $redLight;
+    box-shadow: 0 0 0 1px #ff3838;
+  }
   .social-media-list li:after {
     content: '';
     position: absolute;
@@ -149,14 +189,16 @@
     line-height: 60px;
     border-radius: 50%;
     opacity: 0;
-    box-shadow: 0 0 0 1px #fff;
+    box-shadow: 0 0 0 1px #ee35ff;
     transition: all .2s ease-in-out;
   }
   
   .social-media-list li:hover {
-    background-color: #fff; 
+    background-color: #f827ff5d; 
   }
-  
+  #dark .social-media-list li:hover{
+    background-color: #fd5d5d2f;
+  }
   .social-media-list li:hover:after {
     opacity: 1;  
     transform: scale(1.12);
@@ -164,7 +206,7 @@
   }
   
   .social-media-list li:hover a {
-    color: #000;
+    color: #8b00ad;
   }
   
   
@@ -179,10 +221,14 @@
       display: flex;
       flex-direction: column;
     }
-    .dataContactContainer, .formContact {
+    .contactWrapper .formContact {
       margin: 0 auto;
     }  
-    
+  
+    .contactWrapper .formControl,input, textarea {
+      margin: 3%;
+      width: 280px;
+    }
     .dataContactContainer {
       margin-top: 60px;
       max-width: 300px;
@@ -201,21 +247,20 @@
   
   @media screen and (max-width: 569px) {
   
-    .dataContactContainer, .form-groupwrapper {
-      float: none;
-      margin: 0 auto;
-    }  
-    .formControl, textarea {
-      
-      margin: 0 auto;
+    .contactWrapper{
+      display: flex;
+      flex-direction: column;
+      width: 100%;
+    }
+
+   .contactWrapper .formControl,input, textarea {
+      margin: 3%;
+      width: 250px;
     }
    
     
-    .name, .email, textarea {
-      width: 280px;
-    } 
-    
     .dataContactContainer {
+      width: 100%;
       margin-top: 60px;
       max-width: 280px;
     }  
@@ -233,10 +278,27 @@
       height: 55px;
       line-height: 55px;
     }
+    .contact-text{
+      margin-left: 0;
+    }
     
   }
   
   @media screen and (max-width: 410px) {
+    .dataContactContainer {
+      margin-top: 30px;
+      max-width: 150px;
+    }    
+
+    .contactWrapper .formContact, input, textarea {
+      width: 60px;
+      margin: 2%;
+    }
+
+    .dataContactContainer span{
+      font-size: 12px;
+      letter-spacing: 2px;
+    }
     .formButton {
       width: 99%;
     }
