--- a/src/style/screensStyle/_home.scss
+++ b/src/style/screensStyle/_home.scss
@@ -7,12 +7,13 @@
 .h1Name{
     font-family: $titleFont;
     font-size: 70px;
-    font-weight: bold;
-    line-height: 60px;
+    font-weight: 900;
+    line-height: 70px;
+    letter-spacing: 7px;
 }
 #dark .h1Name{
     color: $red;
-    text-shadow: 2px 1px 3px #e72c2c;
+    text-shadow: 2px 1px 3px #ff66009d;
 }
 
 #light .h1Name{
@@ -20,20 +21,28 @@
    text-shadow: 1px 1px 4px #00ffe0;
 }
 
-
+#light h3, h4{
+    color: $darkBlue;
+}
+#dark h3, h4{
+    color: $violet;
+    }
+    
 h2,h3,h4{
     font-family: $fontGeneric;
     line-height: 40px;
 }
 h3, h4{
-    font-weight: 500;
+    font-weight: 700;
     line-height: 60px;
     font-size: 25px;
+    letter-spacing: 6px;
 }
 
 h2{
-    font-weight: 600;
+    font-weight: 900;
     font-size: 30px;
+    letter-spacing: 6px;
 }
 
 #light h2{
@@ -55,7 +64,7 @@ h2{
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 70%;
+    width: 100%;
     justify-content: space-around;
 }
 .imageDiv{
@@ -75,7 +84,6 @@ h2{
 /*NavBar*/
 .navBarUl{
     padding: 10px;
-    margin:2%;
     display: flex;
     flex-direction: row;
     list-style: none;
@@ -83,15 +91,18 @@ h2{
     a {
         font-size: 25px;
         text-decoration: none;
-        color: $brownLetters;
-        font-weight: 400;
+        color: $darkViolet;
+        font-weight: bold;
+        letter-spacing: 3px;
         vertical-align: top;
         position: relative;
         cursor: pointer;
+        font-family: $fontGeneric;
     }
 li{
     position:relative;
-    padding: 5px;
+    padding: 6px;
+    margin: 1rem;
     &::before{
         content: '';
         position: absolute;
@@ -113,7 +124,10 @@ li{
 }
 }
 
-    
+#dark .navBarUl a{
+    color:$red;
+}
+
 #light .navBarUl li{
     position:relative;
     padding: 5px;
@@ -137,4 +151,89 @@ li{
     
 }
 
+@media screen and (min-width:661px) {
+    .mobileNavbar{
+        display: none;
+    }
+}
 
+.navButton{
+    border-radius: 10px;
+    background-color: $green;
+    color: white;
+    display: none;
+}
+@media screen and (max-width: 660px) {
+    .h1Name{
+        font-size: 40px;
+        line-height: 50px;
+        letter-spacing: 6px;
+    }
+    h2,h3,h4{
+        line-height: 25px;
+    }
+    h3, h4{
+        line-height: 40px;
+        font-size: 16px;
+        letter-spacing: 6px;
+    }
+    
+    h2{
+        font-weight: 700;
+        font-size: 18px;
+        letter-spacing: 5px;
+    }
+    .navFooter{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    } 
+
+    .navBarUl{
+        display: none;
+    }
+    .mobileNavbar{
+        display: flex;
+        flex-direction: column;
+    }
+    .navButton{
+        display: inline-block;
+    }
+    .mobileNavbar a{
+        text-decoration: none;
+        color: $violet;
+    }
+   .mobileNavbar .clean{
+        display: none;
+    }
+ 
+}
+
+@media screen and (max-width: 350px) {
+    .h1Name{
+        font-size: 30px;
+        line-height: 40px;
+        letter-spacing: 6px;
+    }
+    .nameDiv{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 50%;
+        text-align: center;
+    }
+    h2,h3,h4{
+        line-height: 25px;
+    }
+    h3, h4{
+        line-height: 40px;
+        font-size: 13px;
+        letter-spacing: 5px;
+    }
+    
+    h2{
+        font-weight: 700;
+        font-size: 16px;
+        letter-spacing: 4spx;
+    }
+}
