--- a/src/style/screensStyle/_projects.scss
+++ b/src/style/screensStyle/_projects.scss
@@ -10,8 +10,9 @@
     display: flex;
 }
 .unLimited {
-    height: 280px;
+    height: 300px;
     border-radius: 8px; }
+
  iframe {
     @extend .unLimited;
  }
@@ -23,15 +24,15 @@
     place-items: center;
     overflow: hidden;
     border-radius: 20px;
-    box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 10px 0px,
-      rgba(0, 0, 0, 0.5) 0px 2px 25px 0px;
+    // box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 10px 0px,
+    //   rgba(0, 0, 0, 0.5) 0px 2px 25px 0px;
   }
 
-  .card {
+ .card {
     position: absolute;
     width: 97%;
     height: 97%;
-    background: #000814;
+    background-color: #000000;
     border-radius: 20px;
     z-index: 5;
     display: flex;
@@ -42,16 +43,25 @@
     overflow: hidden;
     padding: 20px;
     cursor: pointer;
-    box-shadow: rgba(0, 0, 0, 0.4) 0px 30px 60px -12px inset,
-      rgba(0, 0, 0, 0.5) 0px 18px 36px -18px inset;
+
+    // box-shadow: rgba(0, 0, 0, 0.4) 0px 30px 60px -12px inset,
+    //   rgba(0, 0, 0, 0.5) 0px 18px 36px -18px inset;
   }
+
   .card h3 {
-    font-size: 16px;
+    font-size: 17px;
     color: #40E0D0;
+    letter-spacing: 6px;
+    font-weight: bold;
+    font-family: $titleFont;
+
   }
   .card .content p {
     font-size: 1.6rem;
     line-height: 25px;
+    letter-spacing: 6px;
+    font-weight: 500;
+    font-family: $fontGeneric;
   }
   .card .content {
     transform: translateY(100%);
@@ -72,8 +82,8 @@
     width: 40%;
     height: 150%;
     background: #40E0D0;
-    background: -webkit-linear-gradient(to right, #FF0080, #FF8C00, #40E0D0);
-    background: linear-gradient(to right, #FF0080, #FF8C00, #40E0D0);
+    background: -webkit-linear-gradient(to right, #FF0080, #FF8C00, #27ffe9);
+    background: linear-gradient(to right, #FF0080, #FF8C00, #35ffeb);
     animation: glowing01 5s linear infinite;
     transform-origin: center;
     animation: glowing 5s linear infinite;
@@ -89,7 +99,9 @@
   }
 }
   
- 
+ .iframeDiv {
+  height: 40px;
+ }
 
   
   
