--- a/src/style/screensStyle/_skills.scss
+++ b/src/style/screensStyle/_skills.scss
@@ -2,6 +2,12 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    & h1 {
+        font-family: $fontGeneric;
+        font-weight: 800;
+        font-size: 35px;
+        letter-spacing: 6px;
+    }
 }
 
 .skills{
@@ -21,3 +27,14 @@
     padding: 5px;
     margin: 10px;
 }
+
+#dark .skillsDiv h1{
+    color: $violet;
+
+}
+#light .skillsDiv h1{
+    text-align: center;
+    color:$violet;
+    text-shadow: 1px 1px 4px #00ffe0;
+}
+
