--- a/src/style/screensStyle/_Contact.scss
+++ b/src/style/screensStyle/_Contact.scss
@@ -9,12 +9,12 @@
     text-align: center;
     margin: 0 auto;
     padding: 40px 0;
-    font-family:$fontGeneric;
+    font-family:$titleFont;
     color: #ff0c69;
     text-transform: uppercase;
     letter-spacing: 6px;
     font-weight: 800;
-    font-size: 35px;
+    font-size: 3rem;
   }
   #light .sectionHeader{
     color:$darkBlue;
