--- a/src/style/styles.scss
+++ b/src/style/styles.scss
@@ -40,9 +40,9 @@ background-color: whitesmoke;
     height: 100px;
     justify-content: center;
     align-items: center;
-    font-size: 20px;
+    font-size: 1rem;
     font-weight: bold;
-    font-family: $titleFont;
+    font-family: $fontCuadrada;
     letter-spacing: 6px;
   }
   
