--- a/src/style/_setting.scss
+++ b/src/style/_setting.scss
@@ -1,5 +1,8 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;500&family=Sorts+Mill+Goudy:ital@0;1&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Codystar&family=Press+Start+2P&family=Roboto+Condensed&display=swap');
+
+
 
 /*Colors*/
 $backgoundLight: #bfaa87;
@@ -19,5 +22,6 @@ $violet:#af639e;
 $darkViolet:#6d1e5c;
 
 /*Fonts*/
-$titleFont:'Sorts Mill Goudy', serif;
-$fontGeneric:'Montserrat', sans-serif;
+$titleFont:'Codystar', cursive;
+$fontCuadrada:'Press Start 2P', cursive;
+$fontGeneric:'Roboto Condensed', sans-serif;
