--- a/src/style/screensStyle/_skills.scss
+++ b/src/style/screensStyle/_skills.scss
@@ -3,7 +3,7 @@
     flex-direction: column;
     align-items: center;
     & h1 {
-        font-family: $fontGeneric;
+        font-family: $titleFont;
         font-weight: 800;
         font-size: 35px;
         letter-spacing: 6px;
@@ -22,6 +22,12 @@
 
 }
 
+.skill-div{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 2%;
+}
 .skillsImage{
     width: 100px;
     height: 85px;
@@ -30,7 +36,7 @@
 }
 .skillTitle{
     color: $redLight;
-    font-family: $titleFont;
+    font-family: $fontCuadrada;
     font-size: 16px;
     font-weight: bold;
     line-height: 3;
