--- a/src/style/screensStyle/_home.scss
+++ b/src/style/screensStyle/_home.scss
@@ -107,6 +107,7 @@ li{
     position:relative;
     padding: 6px;
     margin: 1rem;
+    list-style-type: none;
     &::before{
         content: '';
         position: absolute;
@@ -135,6 +136,7 @@ li{
 #light .navBarUl li{
     position:relative;
     padding: 5px;
+    list-style-type: none;
         &::before{
             content: '';
             position: absolute;
@@ -155,7 +157,7 @@ li{
     
 }
 
-
+  
 .navButton{
     border-radius: 10px;
     padding: 10px;
@@ -172,6 +174,9 @@ li{
     .mobileNavbar{
         display: none;
     }
+    .divMobile {
+        display: none;
+      }
 }
 
 
@@ -204,28 +209,51 @@ li{
         flex-direction: column;
         align-items: center;
     } 
-    .divMobile{
-        display: flex;
-    }
+   
     .navBarUl{
         display: none;
     }
-    .mobileNavbar{
-        display: flex;
-        flex-direction: column;
-    }
+ 
     .navButton{
         display: inline-block;
     }
-    .clean {
-        display: none;
+    .divMobile {
+        display: flex;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.247);
+        z-index: 9999;
+        transform: translateX(-100%);
+        transition: transform 0.3s ease;
+      }
+      .divMobile.show {
+        transform: translateX(0%);
+        height: 50%;
+      }
+      .mobileNavbar{
+        display: flex;
+        flex-direction: column;
+        list-style: none;
+        padding: 20px;
+        justify-content: center;
+        align-items: flex-start;
     }
+
     .navLink a{
         text-decoration: none;
         color:$violet;
         margin: 5px;
-        font-size: 15px;
+        letter-spacing: 2px;
+        line-height: 61px;
+        font-size: 25px;
         font-weight: bold;
+        font-family: $fontCuadrada;
+    }
+    .icon-nav{
+        color: #00ffe0;
     }
 
 
