--- a/src/style/screensStyle/_CardProjects.scss
+++ b/src/style/screensStyle/_CardProjects.scss
@@ -34,16 +34,19 @@
  
  @media screen and (max-width: 767px) {
     .content {
-       padding-top: 300px;
-       flex-direction: column;
+      padding-top: 5%;;
+      flex-direction: column;
+    }
+    .content h1{
+      font-size: 1.5rem;
     }
  }
  
 
 
  #light .card {
-    background-color: $lightGreen;
-    border: 2px solid rgba(0, 98, 116, 0.452);
+  background-color: rgb(255 255 255 / 91%);
+  border: 2px solid #27ffe9;
  }
  
 
@@ -56,53 +59,11 @@
  #light .card .title{
     color:$darkBlue;
  }
-//  .card .text {
-//     width: 90%;
-//     margin: 0 auto;
-//     font-size: 16px;
-//     text-align: center;
-//     margin-top: 20px;
-//     color: $redLight;
-//     font-weight: 700;
-//     letter-spacing: 1px;
-//     opacity: 0;
-//     max-height:0;
-//     transition: all 0.3s ease;
-//     font-family: $fontGeneric;
-//  }
+
  #light .card .text{
     color: $darkGreenDark;
  }
 
-
-// .card .textTechnologies{
-//     width: 100%;
-//     margin: 0 auto;
-//     text-align: center;
-//     font-size: 13px;
-//     margin-top: 20px;
-//     color: $violet;
-//     font-weight: 500;
-//     letter-spacing: 2px;
-//     opacity: 0;
-//     max-height:0;
-//     font-family: $fontGeneric;
-//     transition: all 0.3s ease;
-//  }
- 
-
-//  .Unlimited{
-//     text-decoration: none;
-//     font-size: 13px;
-//     text-align: center;
-//     color: rgb(255, 0, 0);
-//     font-weight: 600;
-//     letter-spacing: 1px;
-//     opacity: 0;
-//     max-height:0;
-//     margin: 0 auto;
-//     transition: all 0.3s ease;
-//  }
 
 .card {
    width: 300px;
@@ -112,7 +73,7 @@
    margin: 10px;
    border-radius: 10px;
    box-shadow: 0px 2px 10px rgba(124, 28, 108, 0.301);
-   border: 2px solid rgba(85, 5, 72, 0.452);
+   border: 2px solid rgb(85 5 72 / 65%);
    font-size: 16px;
    transition: all 0.3s ease;
    position: relative;
@@ -218,6 +179,11 @@
 
 
  @media(max-width:700px){
+   .card{
+      width: 200px;
+   
+
+   }
    .animate{
       
       height: 270px;
@@ -229,6 +195,7 @@
         opacity: 1;
         max-height: 40px;
         animation: unlimitedAnimation 6s infinite alternate;
+        font-size: 12px;
       }
    
       .icon {
